--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
 <body>
 
     <div class="header-box">
-        <img src="muhammad.png" class="header-img" alt="Muhammad SAW">
+        <img src="Muhammad.png" class="header-img" alt="Muhammad SAW">
         <div class="center-content">
             <div class="masjid-label">Lakeridge Islamic Center</div>
             <div id="clock">00:00:00</div>
             <div id="hijri">-- --- ----</div>
         </div>
-        <img src="allah.png" class="header-img" alt="Allah SWT">
+        <img src="Allah.png" class="header-img" alt="Allah SWT">
     </div>
 
     <table class="prayer-table">
@@ -288,4 +288,5 @@
         updateData();
     </script>
 </body>
+
 </html>
