--- a/index.html
+++ b/index.html
@@ -197,7 +197,9 @@
             <div id="percent-text" style="text-align: right; font-size: 1.5rem; margin-top: 5px; font-weight: 700;">0% Completed</div>
         </div>
 
-        <img src="Donate-QR.png" class="qr-large" alt="Scan to Donate">
+        <img src="https://api.qrserver.com/v1/create-qr-code/?size=400x400&data=https://app.irm.io/ajaxmasjid.ca/lakeridgeislamiccenter" 
+     class="qr-large" 
+     alt="Scan to Donate">
 
         <div class="slide-msg" style="font-size: 2.5rem;">SCAN TO DONATE NOW</div>
 
@@ -377,4 +379,5 @@
     </script>
 </body>
 </html>
+
 
