--- a/index.html
+++ b/index.html
@@ -29,9 +29,36 @@
         .col-en { text-align: left !important; padding-left: 35px !important; border-radius: 20px 0 0 20px; color: var(--primary-blue); }
         .col-ar { text-align: right !important; padding-right: 35px !important; font-family: 'Amiri', serif; font-size: 3.8rem !important; border-radius: 0 20px 20px 0; color: var(--primary-blue); }
 
-        .hadith-container { height: 280px; background: var(--primary-blue); border-radius: 25px; margin-top: 15px; padding: 20px 40px; color: white; display: flex; flex-direction: column; justify-content: center; text-align: center; border: 4px solid var(--gold); }
-        .ar-text { font-family: 'Amiri', serif; font-size: 2.4rem; direction: rtl; line-height: 1.2; margin-bottom: 10px; }
-        .en-text { font-size: 1.6rem; font-style: italic; color: #cfd8dc; }
+        .hadith-container {
+    flex-grow: 1; /* Allows it to take up remaining vertical space */
+    min-height: 300px;
+    background: var(--primary-blue);
+    border-radius: 25px;
+    margin-top: 15px;
+    padding: 30px;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    border: 4px solid var(--gold);
+    overflow-y: auto; /* Adds a scrollbar if the Hadith is very long */
+}
+.ar-text {
+    font-family: 'Amiri', serif;
+    font-size: 2.2rem;
+    direction: rtl;
+    line-height: 1.4;
+    margin-bottom: 20px;
+    word-wrap: break-word;
+}
+.en-text {
+    font-size: 1.5rem;
+    font-style: italic;
+    color: #cfd8dc;
+    line-height: 1.4;
+    word-wrap: break-word;
+}
 
         .countdown-bar { background: #2e7d32; color: white; padding: 15px; border-radius: 20px; text-align: center; margin-top: 15px; font-size: 2rem; font-weight: 900; border: 4px solid var(--gold); }
 
@@ -117,14 +144,26 @@
 
     // This fetches a random Bukhari Hadith from a different API that is more CORS-friendly
     async function updateHadith() {
-        try {
-            const res = await fetch('https://cdn.jsdelivr.net/gh/fawazahmed0/hadith-api@1/editions/ara-bukhari.json');
-            const data = await res.json();
-            const randomHadith = data.hadiths[Math.floor(Math.random() * 500)]; // Pick from first 500
-            document.getElementById('ar-hadith').innerText = randomHadith.text.substring(0, 250) + "...";
-            document.getElementById('en-hadith').innerText = "Prophetic Wisdom from Sahih Bukhari";
-        } catch (e) { console.log("Hadith Error"); }
-    }
+	    try {
+	        // This API provides both Arabic and English in one go
+	        const res = await fetch('https://random-hadith-generator.vercel.app/api/hadith/bukhari');
+	        const d = await res.json();
+
+	        const arEl = document.getElementById('ar-hadith');
+	        const enEl = document.getElementById('en-hadith');
+
+	        // Check if data exists before rendering
+	        if (d.data && d.data.ar) {
+	            arEl.innerText = d.data.ar;
+	            enEl.innerText = `"${d.data.en}" — ${d.data.book}`;
+	        }
+	    } catch (e) {
+	        console.log("Hadith Fetch Error:", e);
+	        // Fallback in case of API failure
+	        document.getElementById('ar-hadith').innerText = "خَيْرُكُمْ مَنْ تَعَلَّمَ الْقُرْآنَ وَعَلَّمَهُ";
+	        document.getElementById('en-hadith').innerText = '"The best among you are those who learn the Quran and teach it." — Bukhari';
+	    }
+}
 
     function run() {
         const now = new Date();
