--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         }
         body { background-color: var(--bg-color); margin: 0; padding: 15px; height: 100vh; display: flex; flex-direction: column; font-family: 'Inter', sans-serif; overflow: hidden; box-sizing: border-box; }
 
-        /* Layout for 55" Vertical */
         .header-box { background: var(--primary-blue); border-radius: 25px; display: flex; justify-content: space-between; align-items: center; padding: 10px 40px; color: white; height: 180px; border: 4px solid var(--gold); }
         .header-img { height: 140px; width: auto; }
         #clock { font-size: 6rem; font-weight: 900; line-height: 1; letter-spacing: -2px; }
@@ -30,39 +29,26 @@
         .col-ar { text-align: right !important; padding-right: 35px !important; font-family: 'Amiri', serif; font-size: 3.8rem !important; border-radius: 0 20px 20px 0; color: var(--primary-blue); }
 
         .hadith-container {
-    flex-grow: 1; /* Allows it to take up remaining vertical space */
-    min-height: 300px;
-    background: var(--primary-blue);
-    border-radius: 25px;
-    margin-top: 15px;
-    padding: 30px;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    border: 4px solid var(--gold);
-    overflow-y: auto; /* Adds a scrollbar if the Hadith is very long */
-}
-.ar-text {
-    font-family: 'Amiri', serif;
-    font-size: 2.2rem;
-    direction: rtl;
-    line-height: 1.4;
-    margin-bottom: 20px;
-    word-wrap: break-word;
-}
-.en-text {
-    font-size: 1.5rem;
-    font-style: italic;
-    color: #cfd8dc;
-    line-height: 1.4;
-    word-wrap: break-word;
-}
+            flex-grow: 1;
+            min-height: 300px;
+            background: var(--primary-blue);
+            border-radius: 25px;
+            margin-top: 15px;
+            padding: 30px;
+            color: white;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
+            border: 4px solid var(--gold);
+            overflow-y: auto;
+        }
+        .ar-text { font-family: 'Amiri', serif; font-size: 2.2rem; direction: rtl; line-height: 1.4; margin-bottom: 20px; word-wrap: break-word; }
+        .en-text { font-size: 1.5rem; font-style: italic; color: #cfd8dc; line-height: 1.4; word-wrap: break-word; }
 
         .countdown-bar { background: #2e7d32; color: white; padding: 15px; border-radius: 20px; text-align: center; margin-top: 15px; font-size: 2rem; font-weight: 900; border: 4px solid var(--gold); }
 
-        #donation-overlay { position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; background: radial-gradient(circle, var(--primary-blue) 0%, #0a192f 100%); display: none; flex-direction: column; justify-content: center; align-items: center; z-index: 9999; color: white; border: 20px solid var(--gold); box-sizing: border-box; }
+        #ar-hadith, #en-hadith { transition: opacity 0.5s ease-in-out; }
     </style>
 </head>
 <body>
@@ -85,7 +71,8 @@
 
 <div class="hadith-container">
     <div class="ar-text" id="ar-hadith">الْحَمْدُ لِلَّهِ</div>
-    <div class="en-text" id="en-hadith">"Praise be to Allah."</div>
+    <div class="en-text" id="en-hadith">Loading wisdom...</div>
+    <div id="debug-timer" style="font-size: 0.8rem; color: var(--gold); margin-top: 15px; opacity: 0.6;">Next rotation in: 60s</div>
 </div>
 
 <div class="countdown-bar" id="ramadan-countdown">Calculating...</div>
@@ -142,40 +129,49 @@
         } catch (e) { console.log("Prayer Data Error"); }
     }
 
-    // This fetches a random Bukhari Hadith from a different API that is more CORS-friendly
+    let nextRefresh = 60;
+
     async function updateHadith() {
-	    try {
-	        // This API provides both Arabic and English in one go
-	        const res = await fetch('https://random-hadith-generator.vercel.app/api/hadith/bukhari');
-	        const d = await res.json();
+        nextRefresh = 60;
+        try {
+            const cacheBuster = new Date().getTime();
+            const res = await fetch(`https://random-hadith-generator.vercel.app/api/hadith/bukhari?t=${cacheBuster}`);
+            const d = await res.json();
 
-	        const arEl = document.getElementById('ar-hadith');
-	        const enEl = document.getElementById('en-hadith');
+            const arEl = document.getElementById('ar-hadith');
+            const enEl = document.getElementById('en-hadith');
 
-	        // Check if data exists before rendering
-	        if (d.data && d.data.ar) {
-	            arEl.innerText = d.data.ar;
-	            enEl.innerText = `"${d.data.en}" — ${d.data.book}`;
-	        }
-	    } catch (e) {
-	        console.log("Hadith Fetch Error:", e);
-	        // Fallback in case of API failure
-	        document.getElementById('ar-hadith').innerText = "خَيْرُكُمْ مَنْ تَعَلَّمَ الْقُرْآنَ وَعَلَّمَهُ";
-	        document.getElementById('en-hadith').innerText = '"The best among you are those who learn the Quran and teach it." — Bukhari';
-	    }
-}
+            if (d.data && d.data.ar) {
+                arEl.style.opacity = 0;
+                enEl.style.opacity = 0;
+                setTimeout(() => {
+                    arEl.innerText = d.data.ar;
+                    enEl.innerText = `"${d.data.en}" — ${d.data.book}`;
+                    arEl.style.opacity = 1;
+                    enEl.style.opacity = 1;
+                }, 500);
+            }
+        } catch (e) { console.log("Rotation Error:", e); }
+    }
 
     function run() {
         const now = new Date();
         document.getElementById('clock').innerText = now.toLocaleTimeString('en-GB', { hour12: false });
         updateRamadan();
+
+        // Integrated the 60-second debug logic into the main 1-second clock loop
+        nextRefresh--;
+        const debugEl = document.getElementById('debug-timer');
+        if (debugEl) debugEl.innerText = `Next rotation in: ${nextRefresh}s`;
+        if (nextRefresh <= 0) updateHadith();
     }
 
+    // --- CLEAN ENGINE START ---
     setInterval(run, 1000);
     setInterval(updateData, 60000);
     setInterval(updateWeather, 600000);
-    setInterval(updateHadith, 600000);
 
+    // Initial load
     run(); updateData(); updateWeather(); updateHadith();
 </script>
 </body>
