--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             overflow-y: auto;
         }
         .ar-text { font-family: 'Amiri', serif; font-size: 2.2rem; direction: rtl; line-height: 1.4; margin-bottom: 20px; word-wrap: break-word; }
-        .en-text { font-size: 1.5rem; font-style: italic; color: #cfd8dc; line-height: 1.4; word-wrap: break-word; }
+        .en-text { font-size: 1.5rem; font-style: italic; color: #e0e0e0; line-height: 1.4; word-wrap: break-word; }
 
-        .countdown-bar { background: #2e7d32; color: white; padding: 15px; border-radius: 20px; text-align: center; margin-top: 15px; font-size: 2rem; font-weight: 900; border: 4px solid var(--gold); }
+        .countdown-bar { background: #2e7d32; color: white; padding: 15px; border-radius: 20px; text-align: center; margin-top: 15px; margin-bottom: 20px;font-size: 2.2rem; font-weight: 900; border: 4px solid var(--gold); }
 
         #ar-hadith, #en-hadith { transition: opacity 0.5s ease-in-out; }
     </style>
@@ -72,7 +72,6 @@
 <div class="hadith-container">
     <div class="ar-text" id="ar-hadith">الْحَمْدُ لِلَّهِ</div>
     <div class="en-text" id="en-hadith">Loading wisdom...</div>
-    <div id="debug-timer" style="font-size: 0.8rem; color: var(--gold); margin-top: 15px; opacity: 0.6;">Next rotation in: 60s</div>
 </div>
 
 <div class="countdown-bar" id="ramadan-countdown">Calculating...</div>
@@ -129,14 +128,14 @@
         } catch (e) { console.log("Prayer Data Error"); }
     }
 
-    let nextRefresh = 60;
+    let nextRefresh = 900;
 
     async function updateHadith() {
 	    const arEl = document.getElementById('ar-hadith');
 	    const enEl = document.getElementById('en-hadith');
 	    const debugEl = document.getElementById('debug-timer');
 
-	    nextRefresh = 60; // Reset timer
+	    nextRefresh = 900; // Reset timer
 
 	    // Local backup list - guaranteed to work
 	    const backups = [
