--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             overflow-y: auto;
         }
         .ar-text { font-family: 'Amiri', serif; font-size: 3.0rem; direction: rtl; line-height: 1.4; margin-bottom: 20px; word-wrap: break-word; }
-        .en-text { font-size: 3.0rem; font-style: italic; color: #e0e0e0; line-height: 1.4; word-wrap: break-word; }
+        .en-text { font-size: 3.0rem; font-style: italic; color: #e0e0e0; line-height: 1.4; word-wrap: break-word; margin-top: 10px;font-weight: 700;color: var(--gold);}
 
         .countdown-bar { background: #2e7d32; color: white; padding: 15px; border-radius: 20px; text-align: center; margin-top: 15px; margin-bottom: 20px;font-size: 2.2rem; font-weight: 900; border: 4px solid var(--gold); }
 
@@ -205,7 +205,7 @@
 	        // If API fails, pick a random one from our backup list
 	        const pick = backups[Math.floor(Math.random() * backups.length)];
 	        arEl.innerText = pick.ar;
-	        enEl.innerText = `"${pick.en}" — ${pick.book}`;
+	        
             if (d.data && d.data.ar) {
               arEl.style.opacity = 0;
               enEl.style.opacity = 0;
@@ -251,6 +251,7 @@
 </script>
 </body>
 </html>
+
 
 
 
