--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         enEl.style.opacity = 0;
         setTimeout(() => {
             arEl.innerText = pick.ar;
-            enEl.innerText = `"${pick.en}" — Local Fallback`;
+            enEl.innerText = `"${pick.en}" — Sahih Bukhari`;
             arEl.style.opacity = 1;
             enEl.style.opacity = 1;
         }, 500);
@@ -199,5 +199,6 @@
 </script>
 </body>
 </html>
+
 
 
