--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div style="text-align: center; flex-grow: 1;">
         <div id="clock">00:00:00</div>
         <div style="color: var(--gold); font-weight: 800; font-size: 1.8rem;">
-            <span id="temp">--°C</span> | Whitby
+            <span id="temp">--°C</span> | <span id="userCity"></span>
         </div>
         <div id="hijri" style="font-size: 1.6rem; font-weight: 700;">-- --- ----</div>
     </div>
@@ -282,6 +282,7 @@ setInterval(updateLocationAndWeather, 600000); // Check location/weather every 1
 </script>
 </body>
 </html>
+
 
 
 
