--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <script>
     const GOAL = 1400000;
     const RAISED = 450000;
-    const iqamaTimes = { Fajr: "6:30", Dhuhr: "1:15", Asr: "4:30", Maghrib: "Calculated", Isha: "8:00" };
+    const iqamaTimes = { Fajr: "6:30 AM", Dhuhr: "1:15 PM", Asr: "4:30 PM", Maghrib: "Calculated", Isha: "8:00 PM" };
     const salahList = [{id:'Fajr',ar:'الفجر',t:'p'},{id:'Sunrise',ar:'الشروق',t:'s'},{id:'Dhuhr',ar:'الظهر',t:'p'},{id:'Asr',ar:'العصر',t:'p'},{id:'Maghrib',ar:'المغرب',t:'p'},{id:'Isha',ar:'العشاء',t:'p'}];
     
     let nextRefresh = 60;
@@ -277,3 +277,4 @@
 </script>
 </body>
 </html>
+
