--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         .header-img { height: 130px; width: auto; }
         .clock-section { display: flex; align-items: center; justify-content: center; width: 900px; }
 
-        .sidebar { width: 150px; text-align: center; display: flex; flex-direction: column; justify-content: center; height: 120px; flex-shrink: 0; }
+        .sidebar { width: 140px; text-align: center; display: flex; flex-direction: column; justify-content: center; height: 120px; flex-shrink: 0; }
         .left-sidebar { border-right: 3px solid var(--gold); padding-right: 15px; }
         .right-sidebar { border-left: 3px solid var(--gold); padding-left: 15px; }
 
@@ -85,7 +85,7 @@
             <th style="text-align: left; padding-left: 30px;">Salah</th>
             <th>Starting Time</th>
             <th>Iqamah Time</th>
-            <th style="text-align: right; padding-right: 30px;">الصلاة</th>
+            <th style="text-align: right; padding-right: 30px; font-size:1.2rem;">الصلاة</th>
         </tr>
     </thead>
     <tbody id="prayer-body"></tbody>
@@ -264,6 +264,7 @@
 </script>
 </body>
 </html>
+
 
 
 
