--- a/index.html
+++ b/index.html
@@ -40,7 +40,14 @@
         .prayer-table { width: 100%; margin-top: 10px; border-collapse: separate; border-spacing: 0 10px; table-layout: fixed; }
         .table-header th { color: var(--primary-blue); font-size: 1.8rem; font-weight: 900; text-transform: uppercase; padding: 10px; text-align: center; }
         .prayer-row td { background: white; padding: 18px 10px; text-align: center; font-size: 2.8rem; font-weight: 800; border-bottom: 3px solid var(--gold); }
-        .prayer-row.active td { background: var(--highlight-row) !important; border-top: 5px solid var(--gold); border-bottom: 5px solid var(--gold); color: #000; }
+        /* Golden Salah Selector */
+        .prayer-row.active td { 
+        background: linear-gradient(90deg, #fff9c4 0%, #d4af37 100%) !important; 
+        border-top: 5px solid #b8860b; 
+        border-bottom: 5px solid #b8860b; 
+        color: #000; 
+        text-shadow: 1px 1px 2px rgba(255,255,255,0.5);
+    }
         .sunrise-row td { background: #fff3e0; color: #e65100; font-size: 2.2rem; opacity: 0.9; }
 
         .col-en { text-align: left !important; padding-left: 30px !important; border-radius: 20px 0 0 20px; color: var(--primary-blue); }
@@ -170,7 +177,7 @@
     async function updateData() {
     try {
         // FIXED: Using backticks for template literals and school=1 for Hanafi
-        const url = `https://api.aladhan.com/v1/timingsByCity?city=${userCity}&country=${userCountry}&method=1&school=1`;
+        const url = `https://api.aladhan.com/v1/timingsByCity?city=${userCity}&country=${userCountry}&method=1&school=1&adjustment=-1`;
         const response = await fetch(url);
         const d = await response.json();
         
@@ -265,6 +272,7 @@
 </script>
 </body>
 </html>
+
 
 
 
