--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     async function updateData() {
     try {
         // FIXED: Using backticks for template literals and school=1 for Hanafi
-        const url = `https://api.aladhan.com/v1/timingsByCity?city=${userCity}&country=${userCountry}&method=1&school=1&adjustment=-1`;
+        const url = `https://api.aladhan.com/v1/timingsByCity?city=${userCity}&country=${userCountry}&method=1&school=1&adjustment=-1&calendarMethod=MATHEMATICAL`;
         const response = await fetch(url);
         const d = await response.json();
         
@@ -272,6 +272,7 @@
 </script>
 </body>
 </html>
+
 
 
 
